# money-flow

./: .archiveignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CURRENT_TRUTH.md  DESIGN.md  KNOWN_ISSUES.md  PHASE_5_CHANGES_SINCE_5_4.md  README.md  REPO_TREE.md  TODO.md  alembic.ini  current_truth.json  docker-compose.yml  money_flow_project_memory.md  pyproject.toml  theme.css  tokens.json  variables.css
core/: security.py
db/: base.py  session.py
docs/: architecture.md  ci_clean1_ci_enforcement_close_and_locked_deps.md  ci_clean1_ci_enforcement_close_and_locked_deps_summary.json  ci_safe1_ci_gate_and_trading_safety_invariants.md  ci_safe1_ci_gate_and_trading_safety_invariants_summary.json  codex_subagents_money_flow_workflow.md  dash_ia1_two_tab_consolidation.md  dash_ia1_two_tab_consolidation_summary.json  dash_pt2_bolder_exchange_reskin.md  dash_pt2_bolder_exchange_reskin_summary.json  dash_pt2_prototype.html  dash_pt3_header_and_layout_refinements.md  dash_pt3_header_and_layout_refinements_summary.json  dash_qa1_dashboard_browser_smoke.md  dash_qa1_dashboard_browser_smoke_summary.json  dash_qasweep1_investor_readiness_sweep.md  dash_qasweep1_investor_readiness_sweep_summary.json  dash_rlog1_prototype.html  data1_multi_venue_data_foundation.md  data1_multi_venue_snapshot_summary.json  doc_lean1_changelog_rotation_and_lean_reading.md  doc_lean1_changelog_rotation_and_lean_reading_summary.json  doc_ob2_1_markdown_current_truth_refresh.md  doc_ob2_1_markdown_current_truth_refresh_summary.json  (+172 more)
tests/: conftest.py  (+160 more)
(+337 files in other folders)
