[project]
name = "money-flow"
version = "0.1.0"
description = "Phase 1 scaffold for a production-grade multi-strategy Hyperliquid trading platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "cryptography>=45.0.0",
    "eth-account>=0.13.7",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "msgpack>=1.1.2",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.0",
    "structlog>=25.0.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "core", "db", "services"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
